--- a/tmux.conf
+++ b/tmux.conf
@@ -1,202 +1,166 @@
-# ==============================================================================
-# Basic config
-# ==============================================================================
+# Set default terminfos.
+# set -s default-terminal tmux18-256color
+set -s default-terminal "screen-256color"
+set -ga terminal-overrides ",*:Tc"
 
-# Unset ruby version so it respects .ruby-version files
-set-environment -gu RBENV_VERSION
-
-# Fastest command sequences (http://superuser.com/a/252717/65504)
+# Fastest command sequences.
 set -s escape-time 0
 
-# For nice colors
-set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-# XTerm compatibility
+# XTerm compatibility.
 set -g xterm-keys on
 
-# Vi keys in copy mode
+# Vi keys in copy mode.
 set -g mode-keys vi
 
-# History boost
+# History boost.
 set -g history-limit 50000
 
-# Enable mouse
+# Enable mouse.
 set -g mouse on
 
-# Emacs key bindings in command prompt (prefix + :) are better than vi keys, even for vim users
+# Emacs key bindings in command prompt (prefix + :) are better than vi keys, even for vim users.
 set -g status-keys emacs
 
-# Focus events enabled for terminals that support them
+# Focus events enabled for terminals that support them.
 set -g focus-events on
 
-# Super useful when using "grouped sessions" and multi-monitor setup
+# Super useful when using "grouped sessions" and multi-monitor setup.
 setw -g aggressive-resize on
 
-# Messages are displayed for 3 seconds
+# Messages are displayed for 3 seconds.
 set -g display-time 3000
 
-# Don't rename session name automatically
+# Don't rename session name automatically.
 set-option -g allow-rename off
 
-# Lower escape time
+# Lower escape time.
 set -g escape-time 10
-
-# Default shell
-set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-
-# ==============================================================================
-# Key bindings and mappings
-# ==============================================================================
 
 # Prefix
 unbind C-b
 set -g prefix `
 bind-key ` send-prefix
 
-# Reload the file with Prefix r
+# Reload the file with Prefix r.
 bind R source-file ~/.tmux.conf \; display "Sourced tmux.conf"
 
-# Next and prev window like in vim
+# Next and prev window like in vim.
 bind -r - previous-window
 bind -r = next-window
 
-# New windows and panes in the same dir
+# New windows and panes in the same dir.
 bind-key n new-window -c "#{pane_current_path}"
 bind-key i split-window -h -c "#{pane_current_path}"
 bind-key v split-window -c "#{pane_current_path}"
 
-# Pane switching
+# Pane switching.
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-bind-key \ select-pane -l
 
-# Resize panes with arrows
+# Resize panes with arrows.
 bind-key -r Left resize-pane -L 1
 bind-key -r Down resize-pane -D 1
 bind-key -r Up resize-pane -U 1
 bind-key -r Right resize-pane -R 1
 
-# <prefix> r to rename window
+# <prefix> r to rename window.
 bind-key r command-prompt 'rename-window %%'
 
-# <prefix> p to paste buffer
+# <prefix> p to paste buffer.
 unbind p
 bind p paste-buffer
 
-# <prefix> P to choose which buffer to paste
+# <prefix> P to choose which buffer to paste.
 bind P choose-buffer
 
-# Status bar toggle
+# Status bar toggle.
 bind-key D set-option status
 
-# Clear buffer
-bind -n C-\ send-keys -R \; send-keys C-l \; clear-history
-
-# ==============================================================================
-# Copy mode settings
-# ==============================================================================
+# Coy mode settings.
 bind Enter copy-mode
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -Tcopy-mode-vi Escape send -X cancel
-bind-key -Tcopy-mode-vi V send -X rectangle-toggle
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi V send -X rectangle-toggle
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Escape send -X cancel
 
-# ==============================================================================
-# Status bar settings
-# ==============================================================================
-
-# Status
+# Status.
 set -g status off
 
-# Set status position
+# Set status position.
 set-option -g status-position bottom
 
-# Set the base index for windows and panes to 1 instead of 0
+# Set the base index for windows and panes to 1 instead of 0.
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Renumber when window is closed
+# Renumber when window is closed.
 set -g renumber-windows on
 
-# Activity monitoring
+# Activity monitoring.
 set -g visual-activity off
 setw -g monitor-activity off
 
 
-# Default statusbar colors
-set -g status-fg white
-set -g status-bg default
-set -g status-attr bright
+# Default statusbar colors.
+set -g status-style fg=white,bg=default,bright
 
-# Default window title colors
-set-window-option -g window-status-fg white
-set-window-option -g window-status-bg black
-set-window-option -g window-status-format " #I #W "
+# Default window title colors.
+set -g window-status-style fg=white,bg=black
+set -g window-status-format " #I #W "
 
-# Active window title colors
-set-window-option -g window-status-current-bg red
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-attr bright,bold
-set-window-option -g window-status-current-format " #I #W "
+# Active window title colors.
+set -g window-status-current-style fg=white,bg=colour160,bright,bold
+set -g window-status-current-format " #I #W "
+set -g window-status-activity-style fg=white,bg=black,blink
+set -g window-status-bell-style fg=white,bg=black,blink
 
-set-window-option -g window-status-activity-fg white
-set-window-option -g window-status-activity-bg black
-set-window-option -g window-status-activity-attr blink
-set-window-option -g window-status-bell-fg white
-set-window-option -g window-status-bell-bg black
-set-window-option -g window-status-bell-attr blink
+# Pane border.
+set -g pane-border-style fg=white
+set -g pane-active-border-style fg=blue
 
-# Pane border
-set-option -g pane-border-fg white
-set-option -g pane-active-border-fg blue
+# Command line/message text.
+set -g message-style fg=white,bg=black,bright
 
-# Command line/message text
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-# Pane number display
+# Pane number display.
 set -g display-panes-active-colour cyan
 set -g display-panes-colour brightblue
 
-# Status settings
+# Status settings.
 set -g status on
-set -g status-interval 60
+set -g status-interval 2
 set -g status-justify right
 
-# Status line left side
-set -g status-left-length 0
-set -g status-left ""
+# Status line left side.
+set -g status-left "#[fg=white]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --interval 2)#[default]"
+set -g status-left-length 60
 
-# Status line right side
+# Status line right side.
 set -g status-right-length 60
-set -g status-right "#[fg=white,bg=default,bold] #{battery_percentage} #[fg=white,bg=default,bold] %d/%m/%y #[fg=white,bg=default,bold] %H:%M #{cpu_bg_color} #{cpu_percentage} "
+set -g status-right "#[fg=white,bg=default,bold]  %d/%m/%y #[fg=white,bg=default,bold] %H:%M #[fg=white,bg=default,bold] #{battery_percentage} "
 
-# Activity
-set-option -gw window-status-activity-attr dim
-set-option -gw window-status-activity-bg black
-set-option -gw window-status-activity-fg cyan
+# Activity.
+set -g window-status-activity-style fg=cyan,bg=black,dim
 
-# Resurrect
+# Resurrect.
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
-# ==============================================================================
-# Plugins settings
-# ==============================================================================
-
-# List of plugins
+# List of plugins,
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-yank' # yanking helpers
-set -g @plugin 'tmux-plugins/tmux-resurrect' # prefix + C-s save, C-r restore
+set -g @plugin 'thewtex/tmux-mem-cpu-load' # CPU + RAM
+set -g @plugin 'tmux-plugins/tmux-battery' # Battery
 set -g @plugin 'tmux-plugins/tmux-continuum' # Continuous session saving
-set -g @plugin 'tmux-plugins/tmux-battery' # Batter percentage
+set -g @plugin 'tmux-plugins/tmux-resurrect' # prefix + C-s save, C-r restore
+set -g @plugin 'tmux-plugins/tmux-yank' # yanking helpers
 
-# Initialize plugin manager (keep this line at the very bottom of tmux.conf)
+set -g @cpu_low_bg_color "#[bg=colour1]"
+set -g @cpu_medium_bg_color "#[bg=colour2]"
+set -g @cpu_high_bg_color "#[bg=colour3]"
+
+# Initialize plugin manager.
 run '~/.tmux/plugins/tpm/tpm'
