--- a/tmux.conf
+++ b/tmux.conf
@@ -79,15 +79,13 @@ bind P choose-buffer
 bind-key D set-option status
 
 # Copy mode settings.
-# (not needed: bindings handled by tmux-yank plugin)
-#
-# bind Enter copy-mode
-# bind-key -T copy-mode-vi v send -X begin-selection
+bind Enter copy-mode
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X rectangle-toggle
+bind-key -T copy-mode-vi Escape send -X cancel
 # bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-# bind-key -T copy-mode-vi V send -X rectangle-toggle
 # bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 # bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-# bind-key -T copy-mode-vi Escape send -X cancel
 
 # Status.
 set -g status off
